--- a/source/_posts/19/03/18/190318m150030.md
+++ b/source/_posts/19/03/18/190318m150030.md
@@ -243,7 +243,7 @@ Extra notes?:
   <img src="/treegbBlog/fs/m/19/03/18/190318m150030/2019-03-28.svg" alt="2019-03-28">
 </div>
 <ol>
-  <li><strong>( Music ) [ Gladiator Soundtrack ]-{ Now We Are Free }:</strong> <a href="https://youtu.be/xbHPTPUpQ1I">Link</a>.</li>
+  <li><strong>( Music ) { Hans Zimmer }-{ Now We Are Free }-[ movie Gladiator soundtrack ]:</strong> <a href="https://youtu.be/xbHPTPUpQ1I">Link</a>.</li>
   <li><strong>( Music ) { Thomas Bergersen }-{ New Life }-{ Sun }:</strong> <a href="https://youtu.be/m9N9MewJde0">Link</a>.</li>
   <li><strong>( Music ) { Thomas Bergersen }-{ Autumn Love }:</strong> <a href="https://youtu.be/8ukHSu3vvrc">Link</a>.</li>
   <li><strong>( Game ) AoE2 Pro vs Noobs! "This Is Not Supposed To Happen":</strong> <a href="https://youtu.be/u6_Gh7CWqaw">Link</a>.</li>
