--- a/source/_posts/19/04/01/190401m013644.md
+++ b/source/_posts/19/04/01/190401m013644.md
@@ -15,6 +15,16 @@ date: 2019-04-01 01:36:44
 <ol>
   <li><strong>2019-04:</strong> <a href="#190401m022048">Section</a>.</li>
   <li><strong>2019-04-01:</strong> <a href="#190401m022100">Section</a>.</li>
+  <li><strong>2019-04-02:</strong> <a href="#190402m010210">Section</a>.</li>
+  <li><strong>2019-04-03:</strong> <a href="#190403m003704">Section</a>.</li>
+  <li><strong>2019-04-04:</strong> <a href="#190404m005738">Section</a>.</li>
+  <li><strong>2019-04-05:</strong> <a href="#190404m231530">Section</a>.</li>
+  <li><strong>2019-04-06:</strong> <a href="#190406m003643">Section</a>.</li>
+  <li><strong>2019-04-07:</strong> <a href="#190407m004955">Section</a>.</li>
+  <li><strong>2019-04-08:</strong> <a href="#190408m001819">Section</a>.</li>
+  <li><strong>2019-04-09:</strong> <a href="#190409m135501">Section</a>.</li>
+  <li><strong>2019-04-10:</strong> <a href="#190410m142437">Section</a>.</li>
+  <li><strong>2019-04-11:</strong> <a href="#190411m135329">Section</a>.</li>
 </ol>
 <h2>2019-04<a id="190401m022048"></a></h2>
 <div class="imgBlock">
@@ -26,7 +36,255 @@ date: 2019-04-01 01:36:44
   <img src="/treegbBlog/fs/m/19/04/01/190401m013644/2019-04-01.svg" alt="2019-04-01">
 </div>
 <ol>
-  <li><strong>{ Building A Creative Career }-{ Coding Tech }:</strong> <a href="https://youtu.be/byYDuC8lWqY">Link</a>.</li>
+  <li><strong>( Javascript ) [ Understanding { this } keyword ]-{ TylerMcGinnis }:</strong> <a href="https://youtu.be/zE9iro4r918">Link</a>. // Notice <a href="https://youtu.be/zE9iro4r918?t=309">05:09</a> it shows when <code>jim.mother.sayName()</code> is invoked, <code>.this</code> will represent <code>mother</code>, not <code>jim</code>.</li>
+  <li><strong>( Javascript ) [ A Beginner's Guide to Prototype ]-{ TylerMcGinnis }:</strong> <a href="https://youtu.be/XskMWBXNbp0">Link</a>. // <a href="https://youtu.be/XskMWBXNbp0?list=PLqrUy7kON1meuCvGp2D6yTglZhPTT_s_f&t=1252">20:52 --{ so why we still use { Prototype? } instead of { Class } ? }--</a>.</li>
+  <li><strong>( Javascript ) [ Inheritance and the Prototype Chain ]-{ TylerMcGinnis }:</strong> <a href="https://youtu.be/MiKdRJc4ooE">Link</a>. // <a href="https://youtu.be/MiKdRJc4ooE?t=655">10:55</a> - --{ This is why we using ES6 { Class } to get rid of all the complex steps mentioned previously in this video, the inheritance become much more easy. }--. Also see <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/classes">{ MDN }-{ Class }</a>.</li>
+  <li><strong>( Javascript ) [ Modules ]-[ From IIFEs to CommonJS to ES6 Modules ]-{ TylerMcGinnis }:</strong> <a href="https://youtu.be/qJWALEoGge4">Link</a>.</li>
+  <li><strong>Power grid of electricity use [ AGC ]-[ Automatic Generation Control] to balance the grid:</strong> <a href="https://youtu.be/83S09MX9cFE?t=113">Link</a>.</li>
+  <li><strong>( Video ) Hospice - { 最後這條路｜我的人生，由我主宰｜三之一 } - { TheNewsLens }:</strong>
+    <ol>
+      <li><strong>Link:</strong> <a href="https://youtu.be/LrccLx2iYog?list=TLGGyZT5oR1kgaEwMTA0MjAxOQ">Link</a>.
+      <li><strong>The face of the "real world":</strong> We shouldn't ignore any important aspect that compose the real world (even they seems to be more unpleasant), in other words, only "knowing" and <strong>"experiencing"</strong> the most bright side and as well as the most dark side of this world, then we can tell our personality is <strong>"complete"</strong>, is <strong>"whole"</strong>. Maybe if we had experienced only the noble things but no evil things, or if we had experienced only the evil things but no noble things, we are not a <u>"complete"</u>, a <u>"whole"</u> person? This remind me a novel I had read - <code>Siddhartha</code> by Herman Hesse.</li>
+      <li><strong>"自然生物性" 和 "演算法":</strong> --{ 只有在最困難的時刻，才會造就英雄。風和日麗下是不會造就英雄的。 心靈上的對抗和征服，比身體上的，有時候更困難。 戰勝自己的人性，就是戰勝我們生下來時就已經寫進我們人性的的演算法，我們是在跟自然生物性對抗，我們是在修改我們自己的演算法。 }--.</li>
+    </ol>
+  </li>
+</ol>
+
+<h2>2019-04-02<a id="190402m010210"></a></h2>
+<div class="imgBlock">
+  <img src="/treegbBlog/fs/m/19/04/01/190401m013644/2019-04-02.svg" alt="2019-04-02">
+</div>
+<ol>
+  <li><strong>( Javascript ) [ Modules ]-[ From IIFEs to CommonJS to ES6 Modules ]-{ TylerMcGinnis }:</strong> <a href="https://youtu.be/qJWALEoGge4">Link</a>. // <a href="https://youtu.be/qJWALEoGge4?t=711">Self-invoking function link1 (11:51)</a>, <a href="https://stackoverflow.com/questions/10984652/javascript-immediately-invoked-function-patterns">self-invoking function link2</a>. // <a href="https://youtu.be/qJWALEoGge4?t=1159">19:19</a> - <code>Module Bundler</code> of <code>common.js</code> will intelligently collecting all module spead in all .js files, convert it into a single <code>bundle.js</code> file, that browser can understand (then keyword such as <code>require</code>, <code>export</code> ... will all be removed after this).</li>
+  <li><strong>(Music) {閃靈 CHTHONIC }-{ 烏牛欄大護法 }-{ Millennia's Faith Undone }:</strong> <a href="https://youtu.be/Wil6crOV6DU">Link</a>. ... Alright ... I have no idea what this is about ... but at least any art work that convey something (concept) are (might) still a lot better than art work that only produce stimulation and convey nothing like <a href="https://youtu.be/My2FRPA3Gf8">this shit</a>.</li>
+  <li><strong>{ Networking for Web Developers }-{ Coding Tech }:</strong> <a href="https://youtu.be/ek6XowzWQoM">Link</a>. No time to read all of it. <a href="https://youtu.be/ek6XowzWQoM?t=1437">[ 23:57 ]-[sending IP traffic to remote device ]</a>, I had this question before, if the different side (port) of a router, have same ip address and MAC address, or differnt ones? I still don't know it yet.</li>
+  <li><strong>The Amazon monopoly and the problem with Jeff Bezos' business model:</strong> <a href="https://youtu.be/pBffKzWECUQ">Link</a>.</li>
+  <li><strong>( Game ) { Starcraft }-[ Has vs Nice 四強賽 第一場 WCS 蒙特婁 台港澳日挑戰賽 ]:</strong> <a href="https://youtu.be/1na7YZ-QVN8">Link</a>.</li>
+</ol>
+
+<h2>2019-04-03<a id="190403m003704"></a></h2>
+<div class="imgBlock">
+  <img src="/treegbBlog/fs/m/19/04/01/190401m013644/2019-04-03.svg" alt="2019-04-03">
+</div>
+<ol>
+  <li><strong>( Webdev ) [ Why do web developers support older browsers? ]-{ Quora }:</strong> <a href="https://www.quora.com/Why-do-web-developers-support-older-browsers?share=1">Link</a>.</li>
+  <li><strong>( Webdev ) Why support older browsers? Don't make assumptions for why they don't upgrade:</strong> <a href="https://dev.to/zellwk/why-support-older-browsers-5nm">Link</a>. I keep this because I found comments are more interesting.</li>
+  <li><strong>( CSS ) ( PostCSS ) Some things you may think about PostCSS, and you might be wrong:</strong> <a href="http://julian.io/some-things-you-may-think-about-postcss-and-you-might-be-wrong/">Link</a>. Also see <a href="https://cssnext.github.io/">{ PostCSS-cssnext }</a>, a plugin for <code>PostCSS</code> that makes you can use future CSS. Still, I think not all CSS4 syntax is possible, like <code>Grid</code> layout - --{ For now cssnext doesn't have a runtime and this thing cannot be handled by a "simple" transformation. }--, from <a href="https://github.com/MoOx/postcss-cssnext/issues/133">here</a>.</li>
+  <li><strong>( Javascript ) { Async function }-[ MDN ]:</strong> <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Statements/async_function">Link</a>. Please test the second example yourself (contains 5 different cases) to make sure you really understand it.</li>
+  <li><strong>( Javascript ) Understanding { Generator Function } in ES6:</strong> <a href="https://codeburst.io/understanding-generators-in-es6-javascript-with-examples-6728834016d5">Link</a>. You can see one of the example he convert <code>.then().then()</code> version to <code>Generator Function</code> version.</li>
+  <li><strong>(Music) Many times music cover version is better than original version:</strong>
+    <ol>
+      <li><strong>( Music ) [ Piano cover from DooPiano ]-{ 워너원 (Wanna One) }-{ 집 (One's Place) } :</strong> <a href="https://youtu.be/B3Nf_9bPzYw">Link</a>. I later found how pleasant DooPiano's version is (the cover), after when I found how "terrible" <a href="https://youtu.be/bXOQ9wtQQH0">original version</a> is, this is not the first time (I found cover is more preferable) and this link is just an example.</li>
+      <li><strong>( Music ) [ Cover from ThePianoGuys ]-{ Swedish House Mafia }-{ Don't You Worry Child }:</strong> <a href="https://youtu.be/1gCulUDvALM">Link</a>, and <a href="https://youtu.be/1y6smkh6c-0">original version</a>.</li>
+    </ol>
+  </li>
+  <li><strong>( Music ) [ Cover from ThePianoGuys ]-{ Phillip Phillips }-{ Home }:</strong> <a href="https://youtu.be/aF-Z1A0ujlg">Link</a>, and <a href="https://youtu.be/HoRkntoHkIE">original version</a>.</li>
+  <li><strong>( Music ) { Hans Zimmer }-[ live ]-{ Now we are free (Gladiator) }-[ Amazing Czarina Russel ]:</strong> <a href="https://youtu.be/Y1UiD2sxoWo">Link</a>.</li>
+  <li><strong>( Music ) { Hans Zimmer }-{ Now We Are Free }-[ movie Gladiator soundtrack ]:</strong> <a href="https://youtu.be/xbHPTPUpQ1I">Link</a>.</li>
+  <li><strong>( Music ) { Now We Are Free }-[ live in Berlin 2016 ]-[ Gregorian (feat. Amelia Brightman) ]:</strong> <a href="https://youtu.be/8Y0RZA7jUMM">Link</a>. Sharp but soft, hard to tell why.</li>
+  <li><strong>( Music ) { Hans Zimmer }-[ live in Prague ]-{ The Da Vinci Code }:</strong> <a href="https://youtu.be/YMDkw9SjEFc">Link</a>.</li>
+  <li><strong>( Drawing ) Astronaut Artwork with Adobe Illustrator and Photoshop:</strong> <a href="https://youtu.be/YXwHHF-5iUs">Link</a>. Same conclusion - Always from rough to fine, loose to focus, normally not reversed.</li>
+  <li><strong>( Video ) { 郭文贵 }-[ 2019年3月21日班农先生在意大利罗马《信息算法》主题演讲（中英文字幕版） ]:</strong> <a href="https://youtu.be/6kWpAk7K5gw">Link</a>. Have no time to watch, not today.</li>
+  <li><strong>( Video ) 直擊柯P台大7D病房！加護病房看透一切 從白袍力量談人生哲學 看板人物:</strong> <a href="https://youtu.be/uD_BLkZky00">Link</a>. We are so easy to forget history, if we don't review them constantly.</li>
+</ol>
+
+<h2>2019-04-04<a id="190404m005738"></a></h2>
+<div class="imgBlock">
+  <img src="/treegbBlog/fs/m/19/04/01/190401m013644/2019-04-04.svg" alt="2019-04-04">
+</div>
+<ol>
+  <li><strong>Modularized the time (of future planning) just like modularized the code:</strong>
+    <ol>
+      <li><strong>( Webdev ) [ 100 days of code frontend ]-[ curriculum ]-{ nas5w }:</strong> <a href="https://github.com/nas5w/100-days-of-code-frontend/blob/master/README.md">Link</a>. If you have spent any amount of time in the past trying to learn web development or a similar skill, you have likely exprienced going down a <strong>rabbit hole</strong> on any one particular topic. This repository aims to assign a <strong>certain number of days</strong> to each technology and encourages you to move to the next once that number of days is up.</li>
+      <li><strong>The 12 Week Year:</strong> <a href="https://youtu.be/FxvdEqRJEMU">Link</a>.</li>
+      <li><strong>My conclusion is:</strong> Modularized the time (of future planning) just like modularized the code, so I can manage it.</li>
+    </ol>
+  </li>
+  <li><strong>I'm trying to find the first hand source about { AIT } stated that USA have Marines deployed in Taiwan:</strong>
+    <p><a href="https://www.thenewslens.com/article/116738">The news</a> from <code>The News Lens</code> said { American Institute in Taiwan (AIT) } stated that "USA have Marines deployed inside AIT itself (in Taiwan)", but I don't found any <strong>first hand source</strong> about this. This is what I asked other people in the same article:</p>
+    <pre>
+      <code>
+請問一下，這篇關於
+"美國在台協會（AIT） 的發言人 孟雨荷 說 AIT 現址從2005年起就有包括美軍陸戰隊在內的現役軍人駐守"
+的內容的來源 (第一手資訊) (source)，在哪裡可以找到？
+
+我翻遍
+AIT 的 官網，Facebook, Youtube
+https://www.ait.org.tw/zhtw/
+https://www.facebook.com/AIT.Social.Media/
+https://www.youtube.com/user/AmericanInstituteTW/videos
+
+，還是都找不到第一手資訊，有誰可以告訴我關於這段話的第一手資訊在哪裡？
+是不是只是 "中央通訊社" 採訪 (?) 的內容而已？
+我其實對新聞媒體的運作方式一無所知，只是想知道怎麼在必要時候自己爬到第一手資訊而已。
+      </code>
+    </pre>
+    <p>The background of this news is, China military jet crossed the <a href="https://zh.wikipedia.org/wiki/%E8%87%BA%E7%81%A3%E6%B5%B7%E5%B3%BD%E4%B8%AD%E7%B7%9A">Taiwan Strait Midline</a> just for provocation, and USA government include <a href="https://twitter.com/AmbJohnBolton">John Bolton</a> (Assistant to the President for National Security Affairs (NSA)) state that they opposes this kind of military provocations.</p>
+    </li>
+  <li><strong>{ TED Talks }-[ Don't neglect your emotions. Express them — constructively! ]-{ Artūrs Miksons }:</strong> <a href="https://youtu.be/iWlcAylOVNU">Link</a>.</li>
+  <li><strong>{ TED Talks }-[ How I'm making bricks out of ashes and rubble in Gaza ]-{ Majd Mashharawi }:</strong> <a href="https://youtu.be/TdZTvzMPa6s">Link</a>. Keyword - women, building blocks, electricity. Also see <a href="https://youtu.be/ssoZUSOgELk?t=623">[ video ]-[ Nowhere Safe in Gaza: Rockets and Revenge (Dispatch 2) ]</a> and more "Dispatch" of <code>Vice News</code> from <a href="https://www.youtube.com/playlist?list=PLw613M86o5o4p6n-M6A_3PU0OQbB4Hgwp">this play list</a>.</li>
+  <li><strong>( Video ) { 黃國昌 }-[ 馬自達爆漿熄火 也需要戰神質詢？ ]-{ 國會調查兵團 }:</strong> <a href="https://youtu.be/tjyAxEzd-kg">Link</a>.</li>
+  <li><strong>( CSS ) [ A couple of cool things you can do with CSS position sticky ]-{ Kevin Powell }:</strong> <a href="https://youtu.be/8TyoihVGErI">Link</a>. Maybe I can apply this design on my blog? Since my blog,, <code>log table</code> is "long", I can use this design to make my h2 headings more readable?</li>
+  <li><strong>( Javascript ) ( Discussion ) Javascript had it's bad part and good part, make it do what is suppose to do:</strong> This is my comment from <a href="https://newtoypia.blogspot.com/2019/02/puppeteer.html?showComment=1554368302100#c4875717660352917856">{ 玩具烏托邦  }-[ 網頁爬蟲終極武器 puppeteer ]:</a>
+    <blockquote>
+      <p>我什麼都不懂，愚人一個，不過我的一些小小看法是，如果嘗試某些方式試圖解決某個問題很多次後，還是無解，或是有解但是仍然覺得路很崎嶇難行，可能就是代表此路本來就不應該走 (一開始就走錯了)，而要改走別的路，不要硬闖 (即使硬要這麼走還是可以)。</p>
+      <p>讀本地檔 (比如讀 .json) 之所以不行，是因為 http 本來就是設計運作在 server-client 這樣的架構上的，所以無論如何一定要有一個 server, 手機上要用 Javascript 讀檔就裝一個 web server 在手機上。我之前也是在想這個問題，後來放棄了，直接接受 javascirpt 就是要運作在網路的環境下的語言，所以即使是這麼基本的讀檔，還是要架一個 webserver，request from webserver.</p>
+      <p>非同步 (Async) 就不講了，前面有人講過，這也是基於 http/網路環境 本來就是一個 async 的環境，所以用 async 理所當然 (Event Loop 也是？)。之前我想要用 php 寫出一個 script，可以產生對話的效果 (程式跑起來後會問一些問題，我回答它，然後他會根據此回答做出不同的結果) (這常常應用在 bash script 上)，但是我不想要它跑在 command line 的介面上，而是 browser (web page) 上，而我一直想不出方法可以讓程式 (server) 在問出一個問題後中斷，等待我回答問題 (client)，然後再繼續 resume 執行 (server)，我怎麼想就是想不到怎麼做出這麼簡單的效果。後來我明白了，我當初的思維一直停留在 Block-IO 上，而 http 是 async 的，而且是 Stateless 的，Block-IO 基本上不可行，而 Stateful 本身是很糟糕的 design pattern (在 website scale up 後)。所以可能要用 javascript 的 async 解這個問題。這就是一該始思路就走錯了。</p>
+      <p>不過 Javascript 難學是真的，任何產品 UX/UI 設計的不好用起來就很不直覺，如果產品的 UX/UI 在設計時，沒有很努力的考量到一般人的習慣和常規，那用起來就不直覺 (使用者沒辦法不看說明書，用猜就猜出來下一步要幹麻)，然後就會感覺很複雜。所謂要讓某件事 "簡單" 有個要素，就是不能 "出乎意料"。 就好像我們看到常見的播放按鈕比如 O &lt;&lt; &lt; || &gt; &gt;&gt; 口   ，這些符號已經被一般人接受，習慣，內化及直覺化。如果產品的界面按照這些符號設計，用起來就很直覺因為使用者想都不用想，按下去的結果跟他們 "猜測" 的一模一樣，他們潛意識就會覺得 "好用"。但 Javascript 就不是這樣，當太多 "出乎意料" 的規則，語法，pitfall, nuance, quirk, special cases ... 要記時，就會感覺很複雜，難學，因為不符合直覺，不符合直覺有辦法推理的概念，沒幾次就忘了，然後又要再複習一遍 (應該是好幾遍，因為永遠記不起來)，所以 javascript 在這點上設計得很糟糕，非常非常糟糕，python 相比之下好多了，看了 1 2 3，就大概猜得出 4 5 6 要幹麻。</p>
+      <p>所以結論就是，我會認清 Javascript 的優勢在哪，劣勢在哪。優勢多加利用，劣勢就避免 (包括那糟糕的邏輯運算子)。之前好像有人說 Javascript 上可以跑 deep learning 之類的東西，我就想，也許吧，但這好像是 python 或其他低階語言擅長的，我不認為有 silver bullet 可以適用於所有領域.</p>
+    </blockquote>
+  </li>
+  <li><strong>( Video ) { 爸媽囧很大 } - 棄高薪和高位,孩子你在想什麼?:</strong> <a href="https://youtu.be/UKYHomuYeHA">Link</a>.</li>
+</ol>
+
+<h2>2019-04-05<a id="190404m231530"></a></h2>
+<div class="imgBlock">
+  <img src="/treegbBlog/fs/m/19/04/01/190401m013644/2019-04-05.svg" alt="2019-04-05">
+</div>
+<ol>
+  <li><strong>Lean Production, and "what is Engineering?":</strong>
+    <ol>
+      <li><strong>{ Coding Tech } - Taking Back "Software Engineering", Craftsmanship is not Enough:</strong> <a href="https://youtu.be/SkUyE0Z4pow?t=338">Link</a>. Comparing <code>Mass Production</code> and <code>Lean Production</code>, and talking about <a href="https://youtu.be/SkUyE0Z4pow?t=879">what is Engineering?</a>.</li>
+      <li><strong>[ Wikipedia ]-{ Lean Production }:</strong> <a href="https://en.wikipedia.org/wiki/Lean_manufacturing">Link</a>.</li>
+      <li><strong>{ Slideshare } - lean-production vs mass-production:</strong> <a href="https://www.slideshare.net/smichelot/lean-production-vs-mass-production">Link</a>.</li>
+      <li><strong>My conclusion:</strong> So the rule of <u>collaboration between workers</u> and <u>adapting</u> in the concept,, Lean Production, is so much against the rule of <u>one responsibility</u> and <u>do one thing (only) and do one (that) thing well</u> in the concept,, keep [ low couple]-[ high cohesion ]. Make me think that maybe not a good idea to always 100% follow that rule (keep [ low couple]-[ high cohesion ]), it might not be a good idea always 100% follow <code>MVC design pattern</code>. // And one more benefit about Lean production is, it solves the problem of <a href="https://en.wikipedia.org/wiki/Marx%27s_theory_of_alienation">alienation</a> that Marx's theory talks about, we are human, we are not machine or a component of a module.</li>
+    </ol>
+  </li>
+  <li><strong>( Javascript ) { Modules }:</strong> A was so confused about the usage of <code>default</code>, <code>*</code>, <code>... as ...</code>, even <code>import ... from ...</code>. After read <a href="https://stackoverflow.com/questions/45697628/es6-import-as-alias-vs-import-alias#45697718">this helpful article</a>, <a href="https://stackoverflow.com/questions/39282253/how-can-i-alias-a-default-import-in-javascript">this article</a>, <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Statements/import">{ MDN }-{ import }</a>, <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Statements/export">{ MDN }-{ export }</a> and many try and error, I finally get the rules to use it. (The concept itself is not hard to understand, but the quirk of rules is hard to guess). // So something like <code>import {default as bar, foo} from "../fooBar.js";</code> (invoke with <code>bar.smth</code> and <code>foo.smth</code>)<strong>, or</strong> <code>import * as foobarrr from "../fooBar.js";</code> (invoke with <code>foobarrr.default.smth</code> and <code>foobarrr.foo.smth</code>)<strong>, or</strong> <code>import foobarrr from "../fooBar.js";</code> (invoke with <code>foobarrr.smth</code>) is all doable.</li>
+  <li><strong>( Javascript ) { for (... in ...) } vs { for (... of ...) }:</strong> Notice the last example of <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide/Loops_and_iteration#for...of_statement">Link</a>.</li>
+  <li><strong>( Video ) Real ATC, Southwest 1380 engine failure at 2018-04-17:</strong> <a href="https://youtu.be/FkVTdvcghHc">Link</a>.</li>
+  <li><strong>( Video ) Real ATC, Southwest B737 MAX engine failure during takeoff:</strong> <a href="https://youtu.be/frHk1TBRWK4">Link</a>.</li>
+  <li><strong>( Video ) 館長, 4/9號確定"賴清德"要來與館長做直播:</strong> <a href="https://youtu.be/k8MnJE2RRxI">Link</a>.</li>
+  <li><strong>Norwegian cruise engine failure accident and rescue, 1373 passengers:</strong> <a href="https://youtu.be/vH9l_ezKAfk">Link</a>.</li>
+  <li><strong>( Game ) { Hearts of Iron 4 }-[ 荷蘭篇(part03)最後一戰 END ]:</strong> <a href="https://youtu.be/4_jS3mzLd9M">Link</a>. I had play HOI2 long time before, but now I don't have much time to play any game again, what a pitty.</li>
+  <li><strong>( Music ) { Baba Yetu }-{ Christopher Tin }:</strong>
+    <ol>
+      <li><strong>( Music ) { Baba Yetu }-[ United States Navy Band ]:</strong> <a href="https://youtu.be/rKWQQQjAEBU">Link</a>.</li>
+      <li><strong>( Music ) { Baba Yetu }-{ Christopher Tin }-[ official music video ]:</strong> <a href="https://youtu.be/IJiHDmyhE1A">Link</a>.</li>
+      <li><strong>( Music ) { Baba Yetu }-{ Alex Boye }:</strong> <a href="https://youtu.be/vsINANZ6Riw">Link</a>.</li>
+    </ol>
+  </li>
+  <li><strong>( Music ) { Paradise (Peponi) } - { ThePianoGuys } cover - ft. { Alex Boye }:</strong> <a href="https://youtu.be/AWfoI5cwXMs?t=243">Link</a>.</li>
+  <li><strong>( Music ) { Elektronomia }-{ Sky High } [ NCS Release ]:</strong> <a href="https://youtu.be/TW9d8vYrVFQ">Link</a>. Focused, help for study.</li>
+  <li><strong>( Music ) { Girls Generation }-{ Catch Me If You Can }:</strong> <a href="https://youtu.be/sSCmafwLKE4">Link</a>.</li>
+  <li><strong>( Music ) { Weki Meki  }-{ I don't like your Girlfriend }:</strong> <a href="https://youtu.be/z6_FTiF0pk8">Link</a>. The rhythm is so strong and special, it is <strong>firm</strong> where it needs to be <strong>firm</strong> and is <strong>soft</strong> where it needs to be <strong>soft</strong>, <strong>short detail</strong> rythm and <strong>long background</strong> rythm <strong>mixing together</strong> [ perfectly ]-[ seamlessly ], I like the dance. Also see <a href="https://youtu.be/RXOpH8bCFfs">Yoojung cute & dance cover moment</a>, the dance can tell something, the feeling and rythm is "accurate" and in good direction.</li>
+  <li><strong>( Music ) { f(x) }-{ 4 Walls }:</strong> <a href="https://youtu.be/eSpokjDB3cQ">Link</a>.</li>
+  <li><strong>( Music ) { Girl's Day }-{ Oh! My God }:</strong> <a href="https://youtu.be/04FdisNU3vw">Link</a>.</li>
+</ol>
+
+<h2>2019-04-06<a id="190406m003643"></a></h2>
+<div class="imgBlock">
+  <img src="/treegbBlog/fs/m/19/04/01/190401m013644/2019-04-06.svg" alt="2019-04-06">
+</div>
+<ol>
+  <li><strong>( Video ) Hospice - { 最後這條路｜與其等死，我選擇付出｜三之二 } - { TheNewsLens }:</strong> <a href="https://youtu.be/i193RDpRy30">Link</a>. Keep watching the remaining part.</li>
+  <li><strong>Building A Creative Career - { Coding Tech }:</strong>
+    <ol>
+      <li><strong>Link:</strong> <a href="https://youtu.be/byYDuC8lWqY">Link</a>.</li>
+      <li><strong>15:54:</strong> <a href="https://youtu.be/byYDuC8lWqY?t=954">Link</a>. Be <u>good</u> first then be <u>original</u>. For example play covers of you favorite music before writing your own song.</li>
+      <li><strong>21:13:</strong> <a href="https://youtu.be/byYDuC8lWqY?t=1273">Link</a>. If you are stuck, you are probably missing a person (that can make a huge improve for you in a very short time). It's often a person that unlocks the next door, a next relationship, for you. Sometimes it's just the right book to pickup.</li>
+      <li><strong>26:11:</strong> <a href="https://youtu.be/byYDuC8lWqY?t=1571">Link</a>. Your career will have many doors (many entries, instead of just typical one people thinks). Keep an eye open for them.</li>
+    </ol>
+  </li>
+  <li><strong>( Video ) { TED Talks } - Your brain hallucinates your conscious reality - { Anil Seth }:</strong>
+    <ol>
+      <li><strong>Link:</strong> <a href="https://youtu.be/lyu7v7nWzfo">Link</a>.</li>
+      <li><strong>08:24:</strong> <a href="https://youtu.be/lyu7v7nWzfo?t=504">Link</a>. <code>Hallucination</code> is uncontrolled <code>perception</code>, <code>perception</code> is controlled <code>hallucination</code>.</li>
+      <li><strong>08:44:</strong> <a href="https://youtu.be/lyu7v7nWzfo?t=524">Link</a>. If we agree with our <code>hallucination</code>, we call it "reality".</li>
+      <li><strong>10:56:</strong> <a href="https://youtu.be/lyu7v7nWzfo?t=656">Link</a>. ... is enough evidence for the brain to make it's best guess the <strong>fake hand</strong> is in fact a part of the body.</li>
+    </ol>
+  </li>
+  <li><strong>( Javascript ) The Evolution of Async JavaScript: From Callbacks, to Promises, to Async/Await:</strong>
+    <ol>
+      <li><strong>Link:</strong> <a href="https://youtu.be/gB-OmN1egV8">Link</a>. The text (article) version of this video is <a href="https://tylermcginnis.com/async-javascript-from-callbacks-to-promises-to-async-await/?no-cache=1">here</a>.</li>
+      <li><strong>35:17:</strong> <a href="https://youtu.be/gB-OmN1egV8?t=2117">Link</a>. Notice the <code>resolve()</code> callback (inside Promise constructor),, you can not only pass a string to it, but also an object. So with this you can pass some result you get in "first stage" (first Promise), to be the "fuel" to feed the "second stage" (second Promise).</li>
+      <li><strong>38:39:</strong> <a href="https://youtu.be/gB-OmN1egV8?t=2319">Link</a>. From <code>Promise</code> to <code>Async function</code>. Notice, <code>Async function</code> itself (not the resolved value retrieve from <code>await</code>) will return a <strong><code>promise</code> object</strong>, and if any <code>await</code> code inside this <code>async function</code> been rejected, the <code>async function</code> will immediately stop the execution of remaining code (remaining code of this <code>async function</code>) and <strong>return a <code>promise</code> object</strong> that could be catch by <code>catch()</code>, put it simple with example code - <code>anAsyncFunction().catch(doSomethingElseAfterAnyAwaitFoundRejected);</code>.</li>
+      <li><strong>My conclusion about chainning:</strong> So chained <code>promiseObj.then().catch() ...</code> is possible, like this <code>returnANewPromiseObj().then(ifResolve1).catch(ifReject1).then(ifResolve2).catch(ifReject2);</code> (which <u>ifResolve1</u>, <u>ifReject1</u>, <u>ifResolve2</u>, <u>ifReject2</u>) is all callback function, and <u>ifResolve1</u>, <u>ifReject1</u> will always return a second (new) Promise object. Or you can use like this - <code>returnANewPromiseObj().then(ifResolve1).then(ifResolve2).catch(ifReject1And2);</code>, to merge all rejected actions together.</li>
+    </ol>
+  </li>
+  <li><strong>( Javascript ) Why I have to use { finally } block when I can just put these codes behind { catch }?:</strong> <a href="https://stackoverflow.com/questions/18251156/uses-of-the-finally-statement">Link</a>.</li>
+  <li><strong>( Javascript ) { Fetch API }:</strong>
+    <ol>
+      <li><strong>{ Fetch() } - { MDN } - "The Can Store" example:</strong> <a href="https://developer.mozilla.org/en-US/docs/Learn/JavaScript/Client-side_web_APIs/Fetching_data#A_more_complex_example">Link</a>. A nice, simple, but yet complete example, to run through not only Fetch API, but how to write a more elegant and easy-to-manage code.</li>
+      <li><strong>{ Fetch() } - { MDN } - using Fetch:</strong> <a href="https://developer.mozilla.org/en-US/docs/Web/API/Fetch_API/Using_Fetch">Link</a>.</li>
+      <li><strong>{ Fetch() } { resolves } even if http status code is 404?:</strong> <a href="https://stackoverflow.com/questions/39297345/fetch-resolves-even-if-404#39297738">Link</a>.</li>
+      <li><strong>{ Fetch() } request timeout?:</strong> <a href="https://stackoverflow.com/questions/46946380/fetch-api-request-timeout#46946573">Link</a>.</li>
+      <li><strong>{ URL.createObjectURL() } - 不用後端，前端便能產生獲取指定物件的網址:</strong> <a href="https://medium.com/@kf99916/html5-%E7%A5%9E%E5%A5%87%E7%9A%84-object-url-%E4%B8%8D%E7%94%A8%E5%BE%8C%E7%AB%AF-%E5%89%8D%E7%AB%AF%E4%BE%BF%E8%83%BD%E7%94%A2%E7%94%9F%E7%8D%B2%E5%8F%96%E6%8C%87%E5%AE%9A%E7%89%A9%E4%BB%B6%E7%9A%84%E7%B6%B2%E5%9D%80-6df283d58505">Link</a>.</li>
+    </ol>
+  </li>
+  <li><strong>( Javascript ) Check if an element is present in an array:</strong> <a href="https://stackoverflow.com/questions/7378228/check-if-an-element-is-present-in-an-array">Link</a>. Use <code>includes()</code>, or <code>indexOf()</code>.</li>
+  <li><strong>( Video ) { She's Danni } - Weekly Vlog 36 一个艰难的决定:</strong> <a href="https://youtu.be/OccI8CK4G7I">Link</a>. I'm a bit like this kind of personality, the rationality and principle side.</li>
+  <li><strong>( Video ) { The Academy Irish Dance Company } - Dublin Irish Festival 2016:</strong> <a href="https://youtu.be/tEJeaC5x76I">Link</a>.</li>
+</ol>
+
+<h2>2019-04-07<a id="190407m004955"></a></h2>
+<div class="imgBlock">
+  <img src="/treegbBlog/fs/m/19/04/01/190401m013644/2019-04-07.svg" alt="2019-04-07">
+</div>
+<ol>
+  <li><strong>( Video ) 大腕、高官、演員全揪出！南韓性侵 #MeToo 火在燒 (multiple influential sexual scandal in South Korea):</strong> <a href="https://youtu.be/xGMGZHl8bMY">Link</a>. This make me think about the story of <strong><a href="https://en.wikipedia.org/wiki/Elizabeth_Holmes">Elizabeth Holmes</a></strong>, founder and former CEO of company <strong>Theranos</strong>. I learn this again and again - when we (I) believe something, we should <strong>always believe by objective evidence and logic, not how "trusty" the story, speech, feelings seems like.</strong> latter one often been exploited by vicious and high intelligent people who know (how to play) psychology very well, they can build a long <strong>vivid</strong> story, while no any word is true, in front of you in real time. But after the scandal been revealed, you will <strong>stunned</strong> not by the bad thing itself, <strong>but</strong> about how these people are able to tell (and mantain, evolve) such a story that totally different and <strong>conflict and contrary</strong> to their behavior and their real personality (perhaps these story are too real that even the liar themselves start to believe these lies too). These kind of case extend even to <strong>religious, charities, judiciary, medical</strong> ... (yeah, unbelievable isn't it?) and they are not rare case in these field, and it is too hard to believe it is ture because the place it happens, the roles they are, the story they made, are so conflicting.</li>
+  <li><strong>( Video ) ( Gamming ) 外掛種類大全, 你知道遊戲外掛都有哪些嗎? (Game cheat plugin):</strong> <a href="https://youtu.be/5v77U5qKQfI">Link</a>. Not talking the ethics issue here, but the creativity of problem solving of these nerd (who design the cheat plugin) is indeed somehow hilarious.</li>
+  <li><strong>( Javascript ) ( Pitfall ) Example of a Javascript Closure: { setTimeout() } Inside a { For Loop } :</strong> <a href="http://brackets.clementng.me/post/24150213014/example-of-a-javascript-closure-settimeout-inside">Link</a>. OMG, I step on the pitfall stupid like this, even I learned this before.</li>
+  <li><strong>( Javascript ) { Vue JS } crash course - 2019 - { Traversy Media }:</strong> <a href="https://youtu.be/Wy9q22isx3U">Link</a>. Almost finished it. Now I'm start to plan to keep moving to learn new things.</li>
+  <li><strong>( Javascript ) { FormData } object:</strong> <a href="https://developer.mozilla.org/en-US/docs/Web/API/FormData">Link</a>.</li>
+  <li><strong>( Javascript ) Putting trailing commas behind last object, function argument ...:</strong> <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Trailing_commas">Link</a>.</li>
+  <li><strong>( Music ) { Elektronomia }-{ Sky High } [ NCS Release ]:</strong> <a href="https://youtu.be/TW9d8vYrVFQ">Link</a>. Focused, help for study.</li>
+  <li><strong>( Video ) ( Game ) { Age of empire 2 } - { Viper } vs China:</strong> <a href="https://youtu.be/Z1u4yC_xbOw">Link</a>.</li>
+</ol>
+
+<h2>2019-04-08<a id="190408m001819"></a></h2>
+<div class="imgBlock">
+  <img src="/treegbBlog/fs/m/19/04/01/190401m013644/2019-04-08.svg" alt="2019-04-08">
+</div>
+<ol>
+  <li><strong>Thinking about "incremental learning" vs "iterative learning". Thinking about stick with a "curriculum" for learning webdev:</strong>
+    <ol>
+      <li><strong>"Incremental" vs "iterative":</strong> <a href= https://duckduckgo.com/?q=incremental+vs+iterative&t=ffab&ia=images&iax=images"">Link</a>.</li>
+      <li><strong>( Webdev ) Welcome to the { freeCodeCamp } curriculum:</strong> <a href="https://learn.freecodecamp.org/">Link</a>. Ok, I decide I will stick with curriculum of freecodecamp.org start from today, it is a complete roadmap/planning even including Coding Interview Preparation course. But I don't have 1,600 Hour, I just have 3 month, so I will pick the most crucial topic I really should know first, and learning iterative instead of incremental. If I have time later I will come back to learn something more advanced like data structure, algorithm, security ... </li>
+      <li><strong>( Webdev ) [ 100 days of code frontend ]-[ curriculum ]-{ nas5w }:</strong> <a href="https://github.com/nas5w/100-days-of-code-frontend/blob/master/README.md">Link</a>. If you have spent any amount of time in the past trying to learn web development or a similar skill, you have likely exprienced going down a <strong>rabbit hole</strong> on any one particular topic. This repository aims to assign a <strong>certain number of days</strong> to each technology and encourages you to move to the next once that number of days is up.</li>
+      <li><strong>( Webdev ) { DevelopIntelligence } - curriculum - { Vue.js }:</strong> <a href="https://www.developintelligence.com/catalog/web-development-training/vue/introduction-to-vuejs">Link</a>. Might be useful to find out more content <strong>not only Vue</strong>. </li>
+    </ol>
+  </li>
+  <li><strong>My rough curriculum and estimation (keep changing):</strong>
+    <ol>
+      <li><strong>Total available time:</strong> 90 days.</li>
+      <li><strong>Javascript fundamental:</strong> ?? days.</li>
+      <li><strong>JQuery:</strong> ?? days.</li>
+      <li><strong>Vue.js:</strong> ?? days.</li>
+      <li><strong>Nodejs:</strong> ?? days.</li>
+      <li><strong>Express.js:</strong> ?? days.</li>
+      <li><strong>Git and deployment:</strong> ?? days.</li>
+      <li><strong>Database:</strong> ?? days.</li>
+      <li><strong>Algorithm and data structure:</strong> ?? days.</li>
+      <li><strong>Webpack:</strong> ?? days.</li>
+      <li><strong>{ Less } ( CSS pre-processor ):</strong> ?? days.</li>
+      <li><strong>Side project 1:</strong> ?? days.</li>
+      <li><strong>Side project 2:</strong> ?? days.</li>
+      <li><strong>Side project 3:</strong> ?? days.</li>
+      <li><strong>Side project with Woody for visually impaired people:</strong> ?? days.</li>
+      <li><strong>Resume:</strong> ?? days.</li>
+    </ol>
+  </li>
+  <li><strong>( Politic ) President { Barack Obama } went to Africa, and make first strong criticism about { Trump }:</strong> <a href="https://youtu.be/Khq13Nf6NI4">Link</a>. Barack Obama went to Kenya after retired from president. He said (imply) Trump is a lier, nowadays politician lies and they don't get shame, this didin't happens before. Yeah this is so true, something like Trump "don't believe" the <strong>Global Warning</strong> is the [ biggest ]-[ most reliable ] [ evidence ]-[ clue ]-[ thread ] I can tell if a politician like him is lying. Global Warning is a fact baced by science, it is undoubtable fact, it is objective.</li>
+  <li><strong>( Video ) { 四端紅人會 } - 敏實集團董事長 - 秦榮華 - 20180406:</strong> <a href="https://youtu.be/vmvYtcJoyks">Link</a>.</li>
+  <li><strong>( Music ) { Coldplay } - { Something Just Like This } - piano cover - by Ray Ma:</strong> <a href="https://youtu.be/o8PSEluYCzA">Link</a>. Very steady and predictable feeling, suit for studying.</li>
+</ol>
+
+<h2>2019-04-09<a id="190409m135501"></a></h2>
+<div class="imgBlock">
+  <img src="/treegbBlog/fs/m/19/04/01/190401m013644/2019-04-09.svg" alt="2019-04-09">
+</div>
+
+<h2>2019-04-10<a id="190410m142437"></a></h2>
+<div class="imgBlock">
+  <img src="/treegbBlog/fs/m/19/04/01/190401m013644/2019-04-10.svg" alt="2019-04-10">
+</div>
+
+<h2>2019-04-11<a id="190411m135329"></a></h2>
+<div class="imgBlock">
+  <img src="/treegbBlog/fs/m/19/04/01/190401m013644/2019-04-11.svg" alt="2019-04-11">
+</div>
+<ol>
   <li><strong>:</strong> <a href="">Link</a>.</li>
 </ol>
 
@@ -34,7 +292,7 @@ date: 2019-04-01 01:36:44
 
 <div class="facetList">
 Cmm: u190401m013644 x88lost x88fs c88log log88table c88current
-Current: ti88crr88y19 ti88crr88y19dw1 ti88crr88y19m04 ti88crr88y19m04d01 ti88crr88y19m04dw1 ti88crr88y19q2 ti88crr88y19q2dw1 ti88crr88y19w14 ti88crr88y19w14dw1
+Current: ti88crr88y19 ti88crr88y19dw4 ti88crr88y19m04 ti88crr88y19m04d11 ti88crr88y19m04dw4 ti88crr88y19q2 ti88crr88y19q2dw4 ti88crr88y19w15 ti88crr88y19w15dw4
 Time (d): ti88y19 ti88y19dw1 ti88y19m04 ti88y19m04d01 ti88y19m04dw1 ti88y19q2 ti88y19q2dw1 ti88y19w14 ti88y19w14dw1
 </div>
 {% endraw %}
